--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,27 @@
 @tailwind utilities;
 
 
+:root {
+  --background: #000000;
+  --foreground: #171717;
+  --scrollbar-width: 5px;
+  --scrollbar-track-bg: #11182700;
+  --scrollbar-thumb-bg: #ef4444;
+}
+
+::-webkit-scrollbar {
+  width: var(--scrollbar-width);
+}
+
+::-webkit-scrollbar-track {
+  background: var(--scrollbar-track-bg);
+}
+
+:hover::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb-bg);
+  transition: 1000ms ease-in-out;
+}
+
 
 .embla__viewport {
   overflow: hidden;
